[package]
name = "ghostbox"
version = "0.1.0"
authors = ["richardgrave <29334853+RichardGrave@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "^0.10"
rand = "0.7"
chrono = "0.4"